@@ -1,0 +1,2 @@
+<?xml version="1.0" encoding="utf-8"?>
+<rss version="2.0"><channel><title>Pedro Project2 RSS Feed</title><link>http://people.rit.edu/pjm8632/539/project2/news.php</link><description>Project2 RSS Feed</description><language>en-us</language><item><title>RSS feeds 3.0</title><link>http://people.rit.edu/pjm8632/539/project2/news.php</link><pubdate>02/06/12 5:01PM</pubdate><description><![CDATA[Was using the wrong tag name for the date]]></description></item><item><title>RSS Feeds 2.0</title><link>http://people.rit.edu/pjm8632/539/project2/news.php</link><pubdate>02/06/12 5:00PM</pubdate><description><![CDATA[Now with the correct tags!]]></description></item><item><title>RSS Feeds</title><link>http://people.rit.edu/pjm8632/539/project2/news.php</link><pubdate>02/06/12 4:54PM</pubdate><description><![CDATA[The rss feeds should be working now.]]></description></item><item><title>Test</title><link>http://people.rit.edu/pjm8632/539/project2/news.php</link><pubdate>01/22/12 9:14PM</pubdate><description><![CDATA[This is for testing purposes.]]></description></item><item><title>Skyrim Lives 1!</title><link>http://people.rit.edu/pjm8632/539/project2/news.php</link><pubdate>01/20/12 7:18PM</pubdate><description><![CDATA[After having a had received the greatest xmas gift ever, something has gone astray. I do enjoy playing skyrim, but the consequences are dire. The immediate consequence: having lost my break and not accomplished anything.]]></description></item><item><title>Skyrim Lives 2!</title><link>http://people.rit.edu/pjm8632/539/project2/news.php</link><pubdate>01/20/12 7:18PM</pubdate><description><![CDATA[Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vehicula, nibh sit amet volutpat hendrerit, lacus leo dignissim nulla, at laoreet velit nisl a nisi. Nam facilisis vehicula est at interdum. Ut eu nisi tellus. Curabitur rhoncus, tortor nec scelerisque malesuada, ante enim malesuada metus, nec vestibulum urna eros nec justo. Donec suscipit massa ut ligula pellentesque sit amet malesuada nibh fringilla. Maecenas condimentum adipiscing iaculis. Aenean cursus fringilla sem sed rutrum. Pellentesque ipsum massa, posuere eu lobortis et, convallis eu sapien. Praesent congue tempor leo et sagittis. Ut molestie mattis faucibus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Donec ultrices cursus velit, rutrum tincidunt libero egestas vel. Sed faucibus hendrerit vulputate.]]></description></item><item><title>Skyrim Lives 3!</title><link>http://people.rit.edu/pjm8632/539/project2/news.php</link><pubdate>01/20/12 7:18PM</pubdate><description><![CDATA[Vivamus lobortis neque sodales velit dictum ut pellentesque lectus malesuada. Mauris vitae dolor quis tellus euismod volutpat. Integer facilisis posuere blandit. Aliquam eget laoreet leo. Duis feugiat nunc vel justo placerat varius. Donec et tempor elit. Proin in ipsum at sem cursus facilisis. Quisque ut neque nisl, ac vestibulum orci. Sed accumsan luctus dignissim. Ut eu consequat dui. Mauris nulla elit, tincidunt id placerat id, commodo et neque. Curabitur massa est, commodo vel interdum et, condimentum a mauris.]]></description></item><item><title>Skyrim Lives 4!</title><link>http://people.rit.edu/pjm8632/539/project2/news.php</link><pubdate>01/20/12 7:18PM</pubdate><description><![CDATA[Etiam consequat placerat ante, sit amet condimentum velit rutrum in. Suspendisse tempor nisi id justo pharetra dignissim. Donec odio purus, pulvinar non facilisis vitae, placerat quis sem. Nullam at velit enim. Quisque vel dui dolor, vulputate pulvinar nunc. Nullam at nibh a massa laoreet iaculis. Morbi at lorem et justo congue interdum consequat et diam. Ut non elit et arcu tincidunt eleifend a id massa. Nunc at dolor quis nisi semper porttitor. Nulla quis mauris eget ante lacinia commodo. Vivamus in condimentum turpis. Nullam sit amet massa risus, et commodo metus. Cras eleifend fermentum lorem, quis vulputate metus placerat lacinia.]]></description></item><item><title>Skyrim Lives 5!</title><link>http://people.rit.edu/pjm8632/539/project2/news.php</link><pubdate>01/20/12 7:18PM</pubdate><description><![CDATA[Nulla id nulla nibh. Phasellus non posuere magna. Morbi nec massa risus. Maecenas at odio sed ante volutpat elementum at ut urna. Nulla facilisi. Fusce ultrices ornare erat, sit amet eleifend tellus ullamcorper id. Curabitur non blandit nisl. Morbi justo sem, volutpat non vehicula non, volutpat ac elit. Proin lectus quam, suscipit in pretium tristique, varius eu massa. Sed mattis tristique bibendum.]]></description></item><item><title>Skyrim Lives 6!</title><link>http://people.rit.edu/pjm8632/539/project2/news.php</link><pubdate>01/20/12 7:18PM</pubdate><description><![CDATA[Integer non ligula nec est iaculis euismod non ac urna. Morbi volutpat iaculis porta. Integer nec molestie enim. Mauris nec metus tortor, quis dignissim lacus. Pellentesque orci urna, luctus vel eleifend vitae, posuere vitae est. Nullam dictum tempus mi, ac congue risus facilisis sit amet. Aliquam aliquet porta urna, ut fermentum quam dapibus eu. Etiam ut mattis sapien. In non arcu enim. In tempor molestie eros sit amet vestibulum. Duis augue tortor, aliquam eu molestie id, tempus ut mi. Fusce ultrices sapien vel erat interdum eu tincidunt libero placerat. Phasellus ultricies, turpis eget aliquet adipiscing, nunc justo gravida mi, ac fermentum orci velit at eros. In porttitor sagittis nulla in egestas. Phasellus eleifend pulvinar neque, et facilisis ante eleifend a. Nulla id dolor quam.]]></description></item></channel></rss>
